<resources>
    <string name="app_name">capston_2</string>
    <string name="title">스터디플래너</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="login_button">로그인</string>
    <string name="sign_button">회원가입</string>
    <string name="id_textview">아이디</string>
    <string name="sign_idtext">아이디를 입력해주세요.</string>
    <string name="check_button">중복확인</string>
    <string name="sign_signbutton">가입하기</string>
    <string name="sign_namelabel">이름</string>
    <string name="sign_passord_label">비밀번호</string>
    <string name="sign_password_check_label">비밀번호 확인</string>
</resources>